# 2boom-plugins

./: .travis.yml  Makefile.am  README.md  Rules-cpp.mak  build.sh  configure.ac  genmetaindex.py
.github/workflows/: 2boomplugins.yml
ARbouquet/CONTROL/: control
ARbouquet/po/: ARbouquet.pot  Makefile.am  ru.po
ARbouquet/src/: Makefile.am  plugin.py
ARbouquet/src/images/: Makefile.am
CI/: build.sh
ECCcam/CONTROL/: control
ECCcam/po/: ECCcam.pot  Makefile.am  ru.po
ECCcam/src/: Makefile.am  plugin.py
ECCcam/src/images/: Makefile.am
LTV/CONTROL/: control
LTV/po/: LTV.pot  Makefile.am
LTV/src/: Makefile.am  link.txt  plugin.py  reference.txt
QCIfH/CONTROL/: control
QCIfH/po/: Makefile.am  QCIfH.pot  ru.po
QCIfH/src/: Makefile.am  plugin.py  skin_user.py  skin_user.xml
QCIfH/src/images/: Makefile.am
QEIfH/CONTROL/: control
QEIfH/po/: Makefile.am  QEIfH.pot  ru.po
QEIfH/src/: Makefile.am  plugin.py
QEIfH/src/bitratecalc/: Makefile.am
QERfH/CONTROL/: control
QERfH/po/: Makefile.am  QERfH.pot  ru.po
QERfH/src/: Makefile.am  plugin.py
QuickEcmInfo/CONTROL/: control
QuickEcmInfo/e2/: QuickEcmInfo2.py
QuickEcmInfo/po/: Makefile.am  QuickEcmInfo.pot  ru.po  uk.po
QuickEcmInfo/src/: Makefile.am  keymap.xml  plugin.py
QuickEcmInfo/src/images/: Makefile.am
QuickEmuRestart/CONTROL/: control
QuickEmuRestart/po/: Makefile.am  QuickEmuRestart.pot  ru.po  uk.po
QuickEmuRestart/src/: Makefile.am  keymap.xml  plugin.py
QuickEmuRestart/src/images/: Makefile.am
RPUlite/CONTROL/: control
RPUlite/po/: Makefile.am  RPUlite.pot  ru.po  uk.po
RPUlite/src/: Makefile.am  plugin.py  ref_base.py
RPUlite/src/images/: Makefile.am
ReMountNetShare/CONTROL/: control
ReMountNetShare/po/: Makefile.am  RemountNetshare.pot  ru.po
ReMountNetShare/src/: Makefile.am  plugin.py
ReMountNetShare/src/images/: Makefile.am
ReloadSL/CONTROL/: control
ReloadSL/po/: Makefile.am  ReloadSL.pot  ru.po  uk.po
ReloadSL/src/: Makefile.am  plugin.py
TPUlite/CONTROL/: control
TPUlite/po/: Makefile.am  TPUlite.pot  ru.po  uk.po
TPUlite/src/: Makefile.am  plugin.py
TPUlite/src/images/: Makefile.am
UpdatePreview/: Makefile.am
UpdatePreview/CONTROL/: control
UpdatePreview/e2/: Console2.py  Makefile.am
UpdatePreview/po/: Makefile.am  UpdatePreview.pot  ru.po  uk.po
UpdatePreview/src/: Makefile.am  plugin.py
UpdatePreview/src/images/: Makefile.am
YWeather/CONTROL/: control
YWeather/po/: Makefile.am  YWeather.pot  de.po  nl.po  ru.po  sk.po  tr.po  uk.po
YWeather/src/: Makefile.am  keymap.xml  plugin.py
YWeather/src/images/: Makefile.am
YWeather/src/istyle/: Makefile.am
YWfH/CONTROL/: control
YWfH/po/: Makefile.am  YWfH.pot  de.po  nl.po  ru.po  sk.po  tr.po  uk.po
YWfH/src/: Makefile.am  plugin.py  skin_user.xml
YWfH/src/images/: Makefile.am
epanel/: Makefile.am
epanel/CONTROL/: control
epanel/po/: Makefile.am  epanel.pot  ru.po  uk.po
epanel/script/: Makefile.am  openAtv2openPli-emuscript.py
epanel/src/: Makefile.am  emuman.py  epghosts.txt  minstall.py  plugin.py  tools.py
epanel/src/images/: Makefile.am
epgdd/CONTROL/: control
epgdd/po/: Makefile.am  de.po  epgdd.pot  ru.po  uk.po
epgdd/src/: Makefile.am  plugin.py
epgdd/src/images/: Makefile.am
ipktools/CONTROL/: control
ipktools/po/: Makefile.am  ipktools.pot  ru.po
ipktools/src/: Makefile.am  plugin.py
ipktools/src/images/: Makefile.am
m2b/CONTROL/: control
m2b/po/: Makefile.am  m2b.pot  ru.po  uk.po
m2b/src/: Makefile.am  plugin.py
m2b/src/images/: Makefile.am
(+2 files in other folders)
